# COVID-Cross-Country-Dependence-and-its-Forecast-Value

./: .gitignore  ProgressUpdateSlides.qmd  README.md  executive_report.qmd  pyproject.toml
.github/workflows/: README.md  render-report.yml
Analysis/: CS3_RQ2_analysis.ipynb  README.md  case_study_3_RQ1_analysis.qmd  case_study_3_analysis_peer_updated.qmd  comparison_with_hhh4.csv  generate_rq2_figures.py
Analysis/RQ2_hhh4/CS3RQ2_hhh4/: CS3RQ2_hhh4.Rproj  CS3_RQ2_hhh4.r
Analysis/RQ2_hhh4/CS3RQ2_hhh4/hhh4_exports/: hhh4_forecasts_long.csv  hhh4_metadata.csv  hhh4_summary_by_country.csv  hhh4_summary_overall.csv
Data/: AllNationsCombined.csv  Australia.csv  Brazil.csv  Canada.csv  China.csv  README.md  South Africa.csv  US.csv  United Kingdom.csv
Results/: README.md
Support_doc/: case3-proposal.qmd
